@@ -1,3 +1,8 @@
+1998-05-19  Jim Meyering  <meyering@ascend.com>
+
+	* Makefile.am.in: New file.
+	* Makefile.am (Makefile.am): Depend on Makefile.am.in.
+
 1998-05-14  Jim Meyering  <meyering@ascend.com>
 
 	* Makefile.am (EXTRA_DIST): Add them.
